[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bilibili_sdk = { path = "../../bilibili_sdk" }

tokio = {features = ["full"],version = "1"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"