[package]
name = "ws_handle_msg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bilibili_sdk = { path = "../../../bilibili_sdk" }

tokio = {features = ["full"],version = "1"}
tokio-tungstenite = {version = "0.21.0", features = ["native-tls"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"